# snto-smart-tourism-observatory

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .zenodo.json  ARCHITECTURE.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  CUsersDellphase6_out.txt  DEPLOY.md  Dockerfile  LICENSE  MASTER_STRATEGIC_INDEX.md  README.md  WHITEPAPER_SNTO_Architecture_Blueprint.md  alembic.ini  app.py  calculate_delta_ehs.py  db_production_seeder.py  etl_mobility.py  etl_oapn_to_trails.py  etl_oapn_wfs.py  etl_prug_enrich.py  etl_raster_intersection.py  etl_raster_processor.py  etl_socioeconomic.py  etl_tourist_traffic.py  etl_vector_cleaner.py  get_bounding_box.py  make_pipeline_a_figures.py  prepare_raster.py  prepare_rasters_all_territories.py  pyproject.toml  requirements.txt  run_dcs_report.py  run_masatrigo_validation.py  run_phase3_report.py  run_phase4_report.py  run_phase5_report.py  (+10 more)
.claude/: settings.json
clean_assets/: README.md  pnsg_assets.geojson  pnsg_assets.py
deploy/: HUGGINGFACE_SPACE.md  azure-bootstrap.sh
docs/: CETS_Phase1_correspondence.md  GEE_setup_timebox.md  PUBLICATION_STRATEGY.md  README.md  SNTO_Architecture_Infographic.html  SNTO_Preprint_2026_Karahrodi.html  SNTO_Whitepaper_2026_Karahrodi.html  TFM_memoria_borrador.md  baselines_uncertainty_design.md  defensibilidad_academica.md  dossier_institucional_OAPN.md  field_validation_protocol.md  informe_tecnico_limites.md  kit_difusion.md  nota_metodologica_rigor_estadistico.md  nota_metodologica_temporalidad.md  socioeconomic_integration_design.md  temporal_series_design.md  v1.2.0_oapn_expansion_plan.md  views_audit_design.md
scripts/: build_gee_js.py  (+13 more)
(+421 files in other folders)
